<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil"
    android:padding="10dp"
    >


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/linear_layout_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:contentDescription="@string/home"
                app:srcCompat="@drawable/banner" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="15dp">

                <LinearLayout
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textUserName"
                        android:layout_width="177dp"
                        android:layout_height="20dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:text="@string/accede_a_todos_tus_servicios_disponibles">

                    </TextView>
                </LinearLayout>


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="114dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:visibility="visible"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/schedule_date"
                    app:srcCompat="@drawable/ic_ver" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/select_date"
                    app:srcCompat="@drawable/evento" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonPlanDate"
                    style="@style/home_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/schedule_date"

                    android:textSize="13dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />
                <!-- android:onClick="buttonPlanDate" -->

                <Button
                    android:id="@+id/buttonCancelDate"
                    style="@style/home_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/select_date"
                    android:textSize="13dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />
                <!-- android:onClick="buttonCancelDate" -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/update_account"
                    app:srcCompat="@drawable/consultante" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/exit"
                    app:srcCompat="@drawable/exit" />
            </LinearLayout>

            <LinearLayout
                style="@style/linear_layout_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnW"
                    style="@style/home_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/about_me"

                    android:textSize="13dp" />
                <!-- android:onClick="buttonAboutMe" -->
                <Button
                    android:id="@+id/buttonExit"
                    style="@style/home_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/exit"

                    android:textSize="13dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />
                <!-- android:onClick="buttonExit" -->
            </LinearLayout>

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/teal_700"
                android:text="Editar Información Personal" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footerLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/home"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btnPerfil"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/perfil"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btnMapa"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/maps"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>