<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_toLeftOf="@id/profileImg"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#6C6868"
                android:layout_marginRight="20dp"
                android:textSize="14dp"
                android:text="@string/cancela_reservacion" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/nextCitaLyt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="15dp">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/calendarImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:src="@drawable/evento" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/calendarImg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/dot"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/siguiente_cita"
                    android:layout_marginLeft="5dp"
                    android:textSize="14dp"
                    android:textColor="@color/negro"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:id="@+id/fechaHoraTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/negro"
                android:text="dd/MM/aaaa - hh:mm"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/doctorTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#676565"
                android:text="Nombre del Doctor" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/headerCitas"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:text="@string/title_citas"
        android:textAllCaps="false"
        android:textSize="22dp"
        android:gravity="left|center_vertical"
        android:clickable="false"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/citasList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp" />

        <RelativeLayout
            android:id="@+id/emptyLyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blanco">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/negro"
                android:text="@string/empty_citas"
                android:layout_centerInParent="true"
                android:layout_margin="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loadingLyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blanco">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>